[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires-python = ">=3.12,<3.14"

[project]
name = "marin-core"
version = "0.2.0"

requires-python = ">=3.12"
dependencies = [
    "braceexpand",
    "datasets<5.0.0",
    "draccus>=0.11.6",
    "fasttext-wheel>=0.9.2",
    "marin-fray",
    "marin-iris",
    "marin-rigging",
    "fsspec>=2025.3.0",
    "gcsfs",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "marin-haliax",
    "jax>=0.9.2,<0.11",
    "jaxopt>=0.8.3",
    "marin-levanter[serve]",
    "markdownify>=0.14.1",
    "mcp>=1.25.0",
    "numpy",
    "openai",
    "pandas>=2.0",
    "plotly",
    "pyarrow>=23.0.0",
    "regex",
    "requests>=2.33.0",
    "resiliparse>=0.17.2",
    "s3fs>=2024",
    "tqdm",
    "tqdm-loggable",
    "wandb>0.24.0",
    "marin-zephyr",
]

[project.license]
file = "../../LICENSE"

[project.scripts]
marin-mcp-babysitter = "marin.mcp.babysitter:main"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    # for scaling law plotting tests
    "plotly",
]
lint = [
    "ruff==0.14.3",
    "black>=26.3.1",
    "mypy>=1.4.1",
    "pyrefly>=1.0.0,<1.1.0",
    "types-PyYAML",
    "types-requests",
    "click>=8.0",
    "pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
]

math = ["pylatexenc", "sympy>=1.12.1,<1.14"]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "math" },
]

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "tpu" },
    ],
    [
        { extra = "gpu" },
        { extra = "cpu" },
    ],
    [
        { extra = "vllm" },
        { extra = "cpu" },
    ],
    [
        # The vllm extra builds vLLM for TPUs from source, so it must use CPU
        # torch rather than the cu128-pinned torch from the gpu extra.
        { extra = "vllm" },
        { extra = "gpu" },
    ],
]


[project.optional-dependencies]

gpu = [
  "jax[cuda13]==0.10.0",
  # B200 emits a cuBLAS warning with older CUDA 13 cuBLAS builds.
  "nvidia-cublas>=13.2.0.9; sys_platform == 'linux'",
  # Preserve the CoreWeave H100 all-to-all guard under CUDA 13.
  "nvidia-nccl-cu13>=2.28.3; sys_platform == 'linux'",
  # FA4 CuTe/THD attention backends.
  "nvidia-cutlass-dsl[cu13]>=4.5.2,<4.6; sys_platform == 'linux'",
  "flash-attn-4[cu13]>=4.0.0b16,<4.1; sys_platform == 'linux'",
  # Optional raw Sonic MoE gather/combine backend. Keep jax-triton exact:
  # 0.3.0 is missing the CUDA backend API needed by our current stack.
  "jax-triton==0.3.1; sys_platform == 'linux'",
  # This module imports Triton directly; stay on the tested minor without
  # forcing an exact patch version.
  "triton>=3.6.0,<3.7; sys_platform == 'linux'",
  "torch==2.11.0",
  "torchvision==0.26.0",
]
tpu = [
  "jax==0.10.0",
  "jaxlib==0.10.0",
  "libtpu==0.0.40",
  "torch==2.11.0",
  # Linux x86_64
  "torchvision==0.26.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
  # Windows x86_64 (AMD64)
  "torchvision==0.26.0+cpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
  # Linux aarch64, macOS arm64: PyPI default wheel
  "torchvision==0.26.0; (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

cpu = [
  "jax==0.10.0",
  "torch==2.11.0",
  # Linux x86_64
  "torchvision==0.26.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
  # Windows x86_64 (AMD64)
  "torchvision==0.26.0+cpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
  # Linux aarch64, macOS arm64: PyPI default wheel
  "torchvision==0.26.0; (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

rl = [
    "sympy>=1.12.1,<1.14",
    "verifiers==0.1.5",
]

eval = [
    "lm-eval[math,api,ifeval]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
]

# Evalchemy for reasoning-focused LLM evaluations (AIME, MATH500, HumanEval+, etc.)
# Note: Evalchemy is cloned and run at runtime by the EvalchemyEvaluator rather than
# being installed as a pip dependency, due to local file dependencies in evalchemy's
# pyproject.toml that don't work with pip git installs.
# The evaluator clones from commit 6ed674159b37f740f2353a86f596f49f6ac13c19 (2025-01-08)
evalchemy = [
    # Core dependencies needed to run evalchemy
    "lm-eval[math]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    "sympy>=1.12.1,<1.14",
    "antlr4-python3-runtime==4.11",
    "bespokelabs-curator==0.1.16",  # Required by evalchemy's curator_lm module
    "sqlalchemy",  # Required by evalchemy's database models
    # For code evals
    "fire",
]

vizier = [
    "google-vizier[jax]",
]

vllm = [
    "jax==0.10.0",
    "jaxlib==0.10.0",
    "libtpu==0.0.40",
    "vllm",
    "tpu-inference==0.22.1",
    # Pin torch + torchvision explicitly so the per-extra source map below
    # routes them to the pytorch-cpu index during fresh Iris resolves.
    "torch==2.11.0",
    "torchvision==0.26.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.26.0+cpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
    "torchvision==0.26.0; (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

harbor = [
    "harbor>=0.1.42",
]

dedup = [
    # Native (maturin) nightly wheel; floor mirrors the root pyproject.toml pin.
    "marin-dupekit >= 0.1.2.dev202606060824",
]

datakit = [
    "luxical",
    "huggingface-hub",
    "faiss-cpu",
    "scikit-learn",
    "scipy",
]

math = ["pylatexenc", "sympy"]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
torchvision = [
    # Default to the CPU index for TPU/CPU/vLLM builds
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
    { index = "pytorch-cpu", extra = "vllm" },
    # PyTorch cu130 pins an older cuBLAS than the B200 guard above allows.
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux'" },
]
resiliparse = { index = "marin-resiliparse" }
torch = [
    # PyTorch cu130 pins an older cuBLAS than the B200 guard above allows.
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
    { index = "pytorch-cpu", extra = "vllm" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marin"]

[tool.hatch.build.targets.sdist]
packages = ["src/marin"]
