[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-rigging"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "connect-python>=0.9.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "google-auth>=2.0.0",
    "s3fs>=2024.0.0",
]

[project.optional-dependencies]
# Interactive desktop-OAuth login for IAP (run_iap_desktop_login). Only the
# human login path needs it; servers and workers never import it.
iap = ["google-auth-oauthlib>=1.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-timeout",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rigging"]

[tool.pytest.ini_options]
timeout = 10
