[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zephyr"
version = "0.1.0"
description = "Lightweight dataset library for distributed data processing"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fray[ray]",
    "typing-extensions>=4.0",
    "click>=8.0",
    "humanfriendly>=10.0",
    "msgspec>=0.18.0",
    "numpy>=2.0",
    "fsspec>=2023.1.0",
    "braceexpand>=0.1.0",
    "zstandard>=0.18.0",
    "tqdm-loggable>=0.2",
    "vortex-data>=0.1.0",
]

[project.scripts]
zephyr = "zephyr.cli:main"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-timeout",
    "psutil>=5.9.0",
]

dev = [
    { include-group = "test" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/zephyr"]

[tool.hatch.build.targets.sdist]
packages = ["src/zephyr"]

[tool.pytest.ini_options]
timeout = 300
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "INFO"
