[package]
name = "finelog"
version = "0.1.0"
edition = "2021"

# Native finelog server. Unlike `dupekit` (a PyO3 cdylib), finelog is a
# standalone binary that speaks the finelog Connect/RPC protocol over HTTP —
# the RPC socket is the boundary with the Python client, so no PyO3.
[[bin]]
name = "finelog-server"
path = "src/main.rs"

[lib]
name = "finelog"
path = "src/lib.rs"

[dependencies]
connectrpc = { version = "0.6", features = ["axum", "gzip", "zstd"] }
buffa = { version = "0.6", features = ["json"] }
buffa-types = { version = "0.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
# Phase 5d: ServeDir static-file service for the Vue SPA `/static` mount. The
# `fs` feature is the only one needed; tower-http 0.6 is compatible with the
# crate's axum 0.7 tower::Service contract. `tower` (already in the lock via
# axum/tower-http) supplies the `Service` trait bound for the SPA catch-all's
# method-fallback to the connect service.
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
http-body = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Phase 1: ColumnType<->Arrow DataType map (datafusion 53 lands in Phase 3; pin
# arrow 58 now to avoid a mid-stream bump). Phase 2 adds the Arrow IPC decode +
# the parquet L0 writer/footer reader; the parquet `async`/`object_store`
# features are declared now (used by Phase 4/6 remote footer reads) so the
# feature set stays stable across the data-engine phases.
arrow = "58"
parquet = { version = "58", features = ["async", "object_store"] }
bytes = "1"
futures = "0.3"
# Phase 3: the DataFusion read engine. DataFusion 53 re-exports arrow/parquet
# 58 (matching the pins above), so the finelog binary keeps EXACTLY ONE arrow
# version. `object_store` is the same version datafusion uses internally; the
# `gcp` feature is for Phase 4/6 remote reads. `async-trait` is required to impl
# datafusion's `#[async_trait] TableProvider`; `url` is for register_object_store.
datafusion = "53"
object_store = { version = "0.13", features = ["gcp"] }
async-trait = "0.1"
url = "2"
# Rust-owned catalog sidecar; `bundled` keeps the build hermetic (no system
# sqlite). Distinct file from Python's DuckDB registry — never aliased.
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"

[build-dependencies]
connectrpc-build = "0.6"
# Vendors a pinned protoc so the build needs no system protoc. connectrpc-build
# shells out to protoc to parse the .proto files, and our protos use
# `edition = "2023"`, which requires protoc >= 27.
protoc-bin-vendored = "3"
